Moved db to DataDir to prevent ClickOnce overwrites

--- a/FeedSleepRepeatUI/App.config
+++ b/FeedSleepRepeatUI/App.config
@@ -2,5 +2,6 @@
 <configuration>
 	<connectionStrings>
 		<add name="Default" connectionString="Data Source=.\FeedSleepRepeatDB.db;Version=3;" providerName="System.Data.SqlClient" />
+		<add name="DataDir" connectionString="Data Source=|DataDirectory|\FeedSleepRepeatDB.db;Version=3;" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 </configuration>
