--- a/FeedSleepRepeatUI/FeedSleepRepeatUI.csproj
+++ b/FeedSleepRepeatUI/FeedSleepRepeatUI.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.90" />
+    <PackageReference Include="Maikebing.System.Windows.Forms.DataVisualization" Version="5.0.1" />
     <PackageReference Include="System.Data.SQLite.Core" Version="1.0.114.3" />
   </ItemGroup>
 
