--- a/FeedSleepRepeatUI/FeedSleepRepeatUI.csproj
+++ b/FeedSleepRepeatUI/FeedSleepRepeatUI.csproj
@@ -4,7 +4,7 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net5.0-windows</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
-    <ApplicationIcon />
+    <ApplicationIcon>babybottle.ico</ApplicationIcon>
     <Win32Resource />
   </PropertyGroup>
 
@@ -26,6 +26,21 @@
 
   <ItemGroup>
     <ProjectReference Include="..\FeedSleepRepeatLibrary\FeedSleepRepeatLibrary.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
