Tidied up UI classes

--- a/FeedSleepRepeatUI/FeedSleepRepeatUI.csproj
+++ b/FeedSleepRepeatUI/FeedSleepRepeatUI.csproj
@@ -19,6 +19,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.90" />
     <PackageReference Include="Maikebing.System.Windows.Forms.DataVisualization" Version="5.0.1" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
