Added Serilog appSettings

--- a/FeedSleepRepeatUI/App.config
+++ b/FeedSleepRepeatUI/App.config
@@ -2,6 +2,12 @@
 <configuration>
 	<connectionStrings>
 		<add name="Default" connectionString="Data Source=.\FeedSleepRepeatDB.db;Version=3;" providerName="System.Data.SqlClient" />
+		<!--The |DataDirectory| path is %LOCALAPPDATA%\FSR-->
 		<add name="DataDir" connectionString="Data Source=|DataDirectory|\FeedSleepRepeatDB.db;Version=3;" providerName="System.Data.SqlClient" />
 	</connectionStrings>
+	<appSettings>
+		<add key="serilog:using:File" value="Serilog.Sinks.File" />
+		<add key="serilog:write-to:File.path" value="%LOCALAPPDATA%\FSR\FeedSleepRepeat.log" />
+		<add key="serilog:write-to:File.rollingInterval" value="Day"/>
+	</appSettings>
 </configuration>
